# reasonkit-web

./: .dockerignore  .gitignore  CHANGELOG.md  CLAUDE-RS.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  deny.toml  docker-compose.dev.yml  docker-compose.yml  pyproject.toml
.github/: CODEOWNERS  dependabot.yml  labeler.yml
.github/workflows/: ci.yml  release.yml  security.yml  stale.yml
benches/: processing_bench.rs  server_bench.rs
docs/: API.md  ARCHITECTURE.md  ARCHITECTURE_DIAGRAMS.md  SECURITY_AUDIT.md  patterns.md  setup.md
examples/: quick-start-web.rs  stripe_webhook_example.rs
extension/: background.js  content-script.js  manifest.json  popup.html  popup.js
scripts/: README.md  reasonkit-web.service
src/: adapter.py  buffer.rs  connections.rs  cors.rs  error.rs  lib.rs  main.rs  metrics.rs  processing.rs  rate_limit.rs  security.rs  shutdown.rs  tracing_middleware.rs
src/browser/: capture.rs  controller.rs  navigation.rs  stealth.rs
src/extraction/: content.rs  metadata.rs
src/handlers/: capture.rs  feed.rs  mod.rs  status.rs
src/mcp/: server.rs  types.rs
src/stripe/: config.rs  error.rs  events.rs  handler.rs  idempotency.rs  mod.rs  processor.rs  signature.rs
src/web/: server.py
systemd/: README.md  reasonkit-web.env.example  reasonkit-web.service
tests/: README.md  cross_crate_integration_tests.rs  handlers_tests.rs  integration_tests.rs  mcp_tests.rs  proptest_mcp.rs  wasm_browser_tests.rs  wasm_test_utils.rs
